<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/gameover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@android:color/background_dark"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="136dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="69dp"
            android:gravity="center"
            android:text="@string/gameover"
            android:textColor="@android:color/white"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="107dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/yourscore"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="195dp"
            android:layout_height="76dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="141dp"
            android:autoText="true"
            android:gravity="center"
            android:text="@string/newbest"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>