<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:layout_editor_absoluteY="25dp">


    <RelativeLayout
        android:id="@+id/replay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#14000000"
        tools:layout_editor_absoluteY="25dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="143dp"
            android:gravity="center"
            android:text="@string/rname"
            android:textColor="@android:color/holo_green_light"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="309dp"
            android:layout_height="87dp"
            android:layout_below="@+id/tv1"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/tostart"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />

        <Button
            android:id="@+id/button"
            android:layout_width="158dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="103dp"
            android:background="@android:drawable/toast_frame"
            android:gravity="center"
            android:onClick="onStart"
            android:text="@string/start"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="303dp"
            android:layout_height="57dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="19dp"
            android:gravity="center"
            android:text="@string/musinfo"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctrlMusic"
            app:layout_constraintVertical_bias="0.945" />

        <Button
            android:id="@+id/ctrlMusic"
            android:layout_width="60dp"
            android:layout_height="51dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/vol"
            android:gravity="center"
            android:onClick="controlMusic"
            app:layout_constraintBottom_toTopOf="@+id/tv1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bestscore"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bestscore"
            android:layout_width="140dp"
            android:layout_height="163dp"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="156dp"
            android:layout_marginRight="156dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv1"
            app:layout_constraintEnd_toStartOf="@+id/ctrlMusic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

    </RelativeLayout>

</RelativeLayout>

